--- a/coordinate/src/components/FluentCoordinateConversion.css
+++ b/coordinate/src/components/FluentCoordinateConversion.css
@@ -4,12 +4,7 @@
   right: 15px;
 }
 
-.fluent-coordinate-conversion .text {
-  width: 250px;
-  text-align: right;
-}
-
+.fluent-coordinate-conversion .text,
 .fluent-coordinate-conversion .input {
   width: 250px;
-  text-align: right;
 }
