--- a/coordinate-fluent-react-js/style.css
+++ b/coordinate-fluent-react-js/style.css
@@ -25,7 +25,7 @@ calcite-action-pad {
   margin-inline-end: 0.5rem;
 }
 
-esri-devsummit-code {
+esri-demo-code {
   margin: 15px 0;
   font-size: 18px;
   line-height: 24px;
